--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./bin/server.js"
   },
-   "dependencies": {
+  "dependencies": {
     "cors": "^2.8.5",
     "express": "~4.16.1",
     "mongoose": "^5.13.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.12"
   },
   "author": "",
